add LAI treatment

--- a/merge_modis_ecosg/merge_modis_ecosg.ipynb
+++ b/merge_modis_ecosg/merge_modis_ecosg.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6bd9952b-88c9-41c5-b1a7-0c67e3a4f32a",
+   "metadata": {},
+   "source": [
+    "# Deaclare libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c6cdf31c-a59b-4662-af11-8ddea76ffc8f",
@@ -19,26 +27,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb21a237-aa13-4856-8a40-49e43178ed8b",
+   "metadata": {},
+   "source": [
+    "# Declare directories"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "6cbe0b11-5e34-4d17-bdae-9519ce7753b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ecodir='/home/gbessardon/DATA/LAI_treatement/Uncompress/'\n",
-    "modisdir='/home/gbessardon/DATA/laialebdomodis/'\n",
-    "outputdir='/home/gbessardon/DATA/laialebdomodis/MODISECOSG'"
+    "ECOSGVISdir='/home/gbessardon/DATA/LAI_treatement/Uncompress/ALBVIS_SAT'\n",
+    "outputVISdir='/home/gbessardon/DATA/laialebdomodis/MODISECOSG_VIS'\n",
+    "ECOSG_VIS_SFdir='/home/gbessardon/DATA/LAI_treatement/Uncompress/ALBVIS_SNOWFREE'\n",
+    "outputVIS_SFdir='/home/gbessardon/DATA/laialebdomodis/MODISECOSG_VIS_SF'\n",
+    "ECOSGNIRdir='/home/gbessardon/DATA/LAI_treatement/Uncompress/ALBNIR_SAT'\n",
+    "outputNIRdir='/home/gbessardon/DATA/laialebdomodis/MODISECOSG_NIR'\n",
+    "ECOSG_NIR_SFdir='/home/gbessardon/DATA/LAI_treatement/Uncompress/ALBNIR_SNOWFREE'\n",
+    "outputNIRdir='/home/gbessardon/DATA/laialebdomodis/MODISECOSG_NIR_SF'\n",
+    "\n",
+    "MODISdir='/home/gbessardon/DATA/laialebdomodis/'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52e63366-28a5-40eb-8440-ce07bd9c8081",
+   "metadata": {},
+   "source": [
+    "# Function definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a6e14f0-8fad-46a3-a18d-7cdf6c4f3c7c",
+   "metadata": {},
+   "source": [
+    "## Create output dir if does not exists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c4206822-b413-49b7-bb7c-f36eba74cb75",
+   "execution_count": null,
+   "id": "1569ad05-b9c1-451a-95da-448f37150603",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.isdir(outputdir):\n",
-    "    os.mkdir(outputdir)"
+    "def Createdir(outputdir):\n",
+    "    if not os.path.isdir(outputdir):\n",
+    "        os.mkdir(outputdir)\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a161ffc4-9da2-4a1b-a2ca-10ff48f81bde",
+   "metadata": {},
+   "source": [
+    "## Function to merge MODIS with ECOCLIMAP-SG"
    ]
   },
   {
@@ -69,38 +118,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ea190329-c06a-4e08-aeac-06b1a5565c54",
+   "cell_type": "markdown",
+   "id": "bfcdf178-75bf-4142-b1ac-6ead8209c3d9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "listecosg=[os.path.join(ecodir,f) for f in os.listdir(ecodir) if (f.startswith('AL-BH-VI') and f.endswith('c.dir_2'))]\n",
-    "listmodis=[os.path.join(modisdir,f) for f in os.listdir(modisdir) if (f.startswith('mosaic') and f.endswith('ecosg.tif'))]"
+    "## Function to create dataframe to merge ECOSG and MODIS dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3883b445-e808-4847-a61d-d60f2422a766",
+   "execution_count": null,
+   "id": "40d132ff-621f-461c-8d1a-8269fed79f10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dayspattern='mosaic\\d\\d\\d\\d'\n",
-    "dayslist= [re.search(dayspattern,f).group().split('mosaic')[1] for f in listmodis]\n",
-    "testlist=[le for d in dayslist for le in listecosg if d in le]\n",
-    "Resultlist=[os.path.join(outputdir,t.split(ecodir)[1]).replace('dir_2','tif') for t in testlist]"
+    "def Create_merge_dataframe(ecodir,modisdir,startecosg,startmodis,dayspattern='\\d\\d\\d\\d',\n",
+    "                     endecosg='c.dir_2',endmodis='ecosgproj.tif'):\n",
+    "    listecosg=[os.path.join(ecodir,f) for f in os.listdir(ecodir) if (f.startswith(startecosg) and f.endswith(endecosg))]\n",
+    "    listmodis=[os.path.join(modisdir,f) for f in os.listdir(modisdir) if (f.startswith(startmodis) and f.endswith(endmodis))]\n",
+    "    daysp=startmodis+dayspattern\n",
+    "    dayslist= [re.search(daysp,f).group().split(startmodis)[1] for f in listmodis]\n",
+    "    testlist=[le for d in dayslist for le in listecosg if d in le]\n",
+    "    Resultlist=[os.path.join(outputdir,t.split(ecodir)[1]).replace(endecosg,'c.tif') for t in testlist]\n",
+    "    data={'ECOSGfiles':testlist, 'MODISfiles':listmodis, 'days':dayslist, 'outputlist': Resultlist}\n",
+    "    df=pd.DataFrame(data) \n",
+    "    return(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c4d93f20-979c-4d98-894f-06df4f33d6bb",
+   "execution_count": null,
+   "id": "868c7fdc-c215-4701-9b5f-df741cab6190",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data={'ECOSGfiles':testlist, 'MODISfiles':listmodis, 'days':dayslist, 'outputlist': Resultlist}\n",
-    "df=pd.DataFrame(data) "
+    "Create_dataframe(ECOSGdir,MODISdir,'AL-BH-VI','mosaic_VIS',\n",
+    "                 dayspattern='\\d\\d\\d\\d',endecosg='c.dir_2',endmodis='ecosgproj.tif')\n",
+    "Create_dataframe(ECOSGdir,MODISdir,'AL-BH-VI','mosaic_VIS_SF',\n",
+    "                 dayspattern='\\d\\d\\d\\d',endecosg='c.dir_2',endmodis='ecosgproj.tif')\n",
+    "Create_dataframe(ECOSGdir,MODISdir,'AL-BH-NI','mosaic_NIR',\n",
+    "                 dayspattern='\\d\\d\\d\\d',endecosg='c.dir_2',endmodis='ecosgproj.tif')\n",
+    "Create_dataframe(ECOSGdir,MODISdir,'AL-BH-NI','mosaic_NIR_SF',\n",
+    "                 dayspattern='\\d\\d\\d\\d',endecosg='c.dir_2',endmodis='ecosgproj.tif')\n",
+    "Loopover(vis_gr,outputdir,'mosaic_VIS')\n",
+    "Loopover(vis_sf_gr,outputdir,'mosaic_VIS_SF')\n",
+    "Loopover(nir_gr,outputdir,'mosaic_NIR')\n",
+    "Loopover(nir_sf_gr,outputdir,'mosaic_NIR_SF')"
    ]
   },
   {
@@ -112,27 +175,6 @@
    "source": [
     "for ind in range(0,len(df)):\n",
     "    merge_eco_mos(df.ECOSGfiles[ind],df.MODISfiles[ind],df.outputlist[ind])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8652d62a-41a6-4c6d-8696-a964381d3966",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Driver: GTiff/GeoTIFF\\nFiles: /home/gbessardon/DATA/laialebdomodis/MODISECOSG/AL-BH-VI_0905_c.tif\\nSize is 129600, 54000\\nCoordinate System is:\\nGEOGCRS[\"WGS 84\",\\n    DATUM[\"World Geodetic System 1984\",\\n        ELLIPSOID[\"WGS 84\",6378137,298.257223563,\\n            LENGTHUNIT[\"metre\",1]]],\\n    PRIMEM[\"Greenwich\",0,\\n        ANGLEUNIT[\"degree\",0.0174532925199433]],\\n    CS[ellipsoidal,2],\\n        AXIS[\"geodetic latitude (Lat)\",north,\\n            ORDER[1],\\n            ANGLEUNIT[\"degree\",0.0174532925199433]],\\n        AXIS[\"geodetic longitude (Lon)\",east,\\n            ORDER[2],\\n            ANGLEUNIT[\"degree\",0.0174532925199433]],\\n    ID[\"EPSG\",4326]]\\nData axis to CRS axis mapping: 2,1\\nOrigin = (-180.001388888888897,89.999999991917733)\\nPixel Size = (0.002777777777770,-0.002777777777770)\\nMetadata:\\n  AREA_OR_POINT=Area\\nImage Structure Metadata:\\n  INTERLEAVE=BAND\\nCorner Coordinates:\\nUpper Left  (-180.0013889,  90.0000000) (180d 0\\' 5.00\"W, 90d 0\\' 0.00\"N)\\nLower Left  (-180.0013889, -60.0000000) (180d 0\\' 5.00\"W, 60d 0\\' 0.00\"S)\\nUpper Right ( 179.9986111,  90.0000000) (179d59\\'55.00\"E, 90d 0\\' 0.00\"N)\\nLower Right ( 179.9986111, -60.0000000) (179d59\\'55.00\"E, 60d 0\\' 0.00\"S)\\nCenter      (  -0.0013889,  15.0000000) (  0d 0\\' 5.00\"W, 15d 0\\' 0.00\"N)\\nBand 1 Block=129600x1 Type=Int16, ColorInterp=Gray\\n  NoData Value=0\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gdal.Info(df.outputlist[ind])"
    ]
   },
   {
